refactor:code structure and directory

--- a/_static/index.html
+++ b/_static/index.html
@@ -26,6 +26,12 @@
             <p class="movie-year">2004</p>
         </article>
         
+        <article class="movie-card">
+            <img src="https://m.media-amazon.com/images/M/MV5BYzdjMDAxZGItMjI2My00ODA1LTlkNzItOWFjMDU5ZDJlYWY3XkEyXkFqcGc@._V1_SX300.jpg" alt="Poster of Interstellar" class="movie-poster"/>
+            <h2 class="movie-title">Interstellar</h2>
+            <p class="movie-year">2014</p>
+        </article>
+        
         </section>
     </main>
 
